# udp-server-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
src/: .gitignore  CMakeLists.txt
src/examples/: main.c
src/include/udp-server/: udp_server.h
src/lib/: CMakeLists.txt  udp_server.c
